# coloraide

./: .coveragerc  .eslintrc  .gitignore  .pyspelling.yml  404.html  LICENSE  LICENSE.md  MANIFEST.in  README.md  colorswatch.css  gulpfile.babel.js  gulpfile.babel.mjs  hatch_build.py  index.html  mkdocs.yml  package-lock.json  package.json  playground-config-1e20e984.js  playground-config-362fea92.js  playground-config-3c7321de.js  playground-config-3f4bc6d6.js  playground-config-410dc711.js  playground-config-4a12028b.js  playground-config-50c86242.js  playground-config-5165ba04.js  playground-config-5174321b.js  playground-config-52c8e5b3.js  playground-config-59e1c1c1.js  playground-config-6766eb6d.js  playground-config-7a0dfc8c.js  playground-config-91aee9de.js  playground-config-a5e73e9d.js  playground-config-a94ff8a4.js  playground-config-c62f9f9b.js  playground-config-d112cc38.js  playground-config-d7e0ce4b.js  playground-config-dceb0900.js  playground-config-e089e6cf.js  playground-config-e202a72e.js  playground-config-e3b414b9.js  (+9 more)
.github/: labels.yml
.github/workflows/: build.yml  deploy.yml  publish.yaml
_snippets/: abbr.txt  package.txt  playground.py.txt  playground.txt  pycode.txt
about/acknowledgments/: index.html
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
advanced/: index.html
api/: index.html
assets/coloraide-extras/: extra-13b5baf24b.css  extra-17fdb77316.css  extra-17fdb77316.css.map  extra-1cdb6f4f4d.css.map  extra-391b1ef8ad.css  extra-46a5963a21.css  extra-46eee0cb1a.css  extra-46eee0cb1a.css.map  extra-477e18ad12.css  extra-477e18ad12.css.map  extra-51c649e973.css  extra-696a2734c9.css.map  extra-6d1f4dbbc6.css.map  extra-71ac3701da.css  extra-728132a6d6.css  extra-728132a6d6.css.map  extra-753860a807.css.map  extra-7ddc78df16.css.map  extra-8411e71fd9.css.map  extra-bd45e82c72.css  extra-bd45e82c72.css.map  extra-c47fac55e6.css  extra-c47fac55e6.css.map  extra-c9c195c408.css  extra-c9c195c408.css.map  extra-ccd229caf0.css.map  extra-e1cd7ecf37.css  extra-e1cd7ecf37.css.map  extra-fb70a42784.css.map  extra-notebook-0021f326.js  extra-notebook-0021f326.js.map  extra-notebook-04888837.js  extra-notebook-04888837.js.map  extra-notebook-05ceea18.js  (+93 more)
average/: index.html
cat/: index.html
chromaticity/: index.html
color/: index.html
coloraide/: __init__.py  __meta__.py  algebra.py  average.py  cat.py  channels.py  cmfs.py  color.py  convert.py  cvd.py  deprecate.py  easing.py  everything.py  filters.py  harmonies.py  illuminants.py  interpolate.py  matcher.py  parse.py  pointer_gamut.py  sds.py  spectrum.py  temperature.py  types.py  util.py
colorcss/: __init__.py  __meta__.py  color_mod.py  parse.py
colors/: index.html
compositing/: index.html
contrast/: index.html
demos/: 3d_models.html  colorpicker.html  index.html
distance/: index.html
filters/: index.html
gamut/: index.html
harmonies/: index.html
interpolation/: index.html
manipulation/: index.html
playground/: Markdown-3.3.4-py3-none-any.whl  Markdown-3.4.4-py3-none-any.whl  Markdown-3.5.1-py3-none-any.whl  Markdown-3.6-py3-none-any.whl  Markdown-3.7-py3-none-any.whl  Pygments-2.11.2-py3-none-any.whl  Pygments-2.16.1-py3-none-any.whl  coloraide-0.1.0-py3-none-any.whl  coloraide-0.1.0a17-py3-none-any.whl  coloraide-0.1.0a18-py3-none-any.whl  coloraide-0.1.0a19-py3-none-any.whl  coloraide-0.1.0a20-py3-none-any.whl  coloraide-0.1.0a21-py3-none-any.whl  coloraide-0.1.0a22-py3-none-any.whl  coloraide-0.1.0a23-py3-none-any.whl  coloraide-0.1.0a24-py3-none-any.whl  coloraide-0.1.0a25-py3-none-any.whl  coloraide-0.1.0a26-py3-none-any.whl  coloraide-0.1.0a27-py3-none-any.whl  coloraide-0.10.0-py3-none-any.whl  coloraide-0.11.0-py3-none-any.whl  coloraide-0.12.0-py3-none-any.whl  coloraide-0.13.0-py3-none-any.whl  coloraide-0.14.0-py3-none-any.whl  coloraide-0.14.1-py3-none-any.whl  coloraide-0.14.2-py3-none-any.whl  coloraide-0.15.0-py3-none-any.whl  coloraide-0.15.0.post1-py3-none-any.whl  coloraide-0.15.1-py3-none-any.whl  coloraide-0.16.0-py3-none-any.whl  coloraide-0.17.1-py3-none-any.whl  coloraide-0.18.0-py3-none-any.whl  coloraide-0.18.1-py3-none-any.whl  coloraide-0.2.0-py3-none-any.whl  coloraide-0.3.0-py3-none-any.whl  coloraide-0.4.0-py3-none-any.whl  coloraide-0.5.0-py3-none-any.whl  coloraide-0.6.0-py3-none-any.whl  coloraide-0.7.0-py3-none-any.whl  coloraide-0.8.0-py3-none-any.whl  (+89 more)
plugins/: index.html
requirements/: dev.txt  docs.txt  lint.txt  test.txt  tools.txt
search/: search_index.json
strings/: index.html
temperature/: index.html
tests/: test_a98_rgb.py  test_a98_rgb_linear.py  test_aces2065_1.py  test_acescc.py  test_acescct.py  test_acescg.py  test_algebra.py  test_api.py  test_average.py  test_blend_modes.py  test_cam02.py  test_cam02_jmh.py  test_cam02_ucs.py  test_cam16.py  test_cam16_jmh.py  test_cam16_ucs.py  test_cat.py  test_cct.py  test_chromaticity.py  test_cmfs.py  test_cmy.py  test_cmyk.py  test_compositing.py  test_contrast.py  test_cubehelix.py  test_cvd.py  test_din99o.py  test_din99o_lch.py  test_display_p3.py  test_display_p3_linear.py  test_distance.py  test_easing.py  test_filters.py  test_gamut.py  test_harmonies.py  test_hct.py  test_hellwig.py  test_hellwig_jmh.py  test_helmgen.py  test_helmgenlch.py  (+64 more)
tools/: 3d_diagrams.py  apply_gamut.py  average_img.py  benchmark_gma.py  buildwheel.py  buildwheel.sh  calc_bradford_cat.py  calc_cam16_min_m.py  calc_cat_matrices.py  calc_cvd_matrices.py  calc_hct_j_poly.py  calc_hct_min_c.py  calc_ictcp_matrices.py  calc_igpgtg_matrices.py  calc_ipt_matrices.py  calc_jzazbz_matrices.py  calc_jzczhz_min_c.py  calc_lch_min_c.py  calc_lch_threshold.py  calc_lch_treshold.py  calc_matrix.py  calc_oklab_matrices.py  calc_range_rgb.py  calc_reflect.py  calc_rlab_matrices.py  calc_visible_spectrum_lut.py  calc_xyz_transform.py  cie_diagrams.py  colors.py  compose_imgs.py  easing_diagram.py  falgebra.py  filter_img.py  filters.py  gamut_3d_diagram.py  gamut_3d_diagrams.py  gamut_3d_plotly.py  gamut_diagram.py  gamutcheck.py  gen_3d_models.py  (+16 more)
(+885 files in other folders)
