[build-system]
requires = [
    "hatchling>=0.21.1",
]
build-backend = "hatchling.build"

[project]
name = "coloraide"
description = "A color library for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "typing-extensions;python_version<'3.11'"
]
authors = [
    { name = "Isaac Muse", email = "Isaac.Muse@gmail.com" },
]
keywords = [
    "css",
    "colour",
    "color",
    "color-spaces",
    "color-contrast",
    "color-difference",
    "color-vision-deficiency",
    "color-conversion",
    "color-harmonies",
    "color-filters",
    "color-interpolation",
    "color-temperature",
    "color-manipulation"
]
dynamic = [
    "classifiers",
    "version",
]

[project.urls]
Homepage = "https://github.com/facelessuser/coloraide"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "code"
path = "coloraide/__meta__.py"

[tool.hatch.build.targets.wheel]
include = [
    "/coloraide",
]

[tool.hatch.build.targets.sdist]
include = [
    "/docs/src/markdown/**/*.md",
    "/docs/src/markdown/**/*.gif",
    "/docs/src/markdown/**/*.png",
    "/docs/src/markdown/dictionary/*.txt",
    "/docs/theme/**/*.css",
    "/docs/theme/**/*.js",
    "/docs/theme/**/*.html",
    "/docs/theme/**/*.css.map",
    "/docs/theme/**/*.js.map",
    "/coloraide/**/*.py",
    "/coloraide/py.typed",
    "/requirements/*.txt",
    "/tests/**/*.py",
    "/tools/**/*.py",
    "/.pyspelling.yml",
    "/.coveragerc",
    "/mkdocs.yml"
]

[tool.mypy]
files = [
    "coloraide"
]
strict = true
show_error_codes = true

[tool.hatch.metadata.hooks.custom]

[tool.ruff]
line-length = 120

target-version = "py311"

extend-exclude = [
    "tools/oklab_srgb_gamut_approximation.py"
]

lint.select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "D",    # pydocstyle
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "E",    # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    # "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020,
    "PERF"  # Perflint
]

lint.ignore = [
    "B905",
    "D202",
    "D203",
    "D212",
    "D401",
    "E731",
    "E741",
    "N801",
    "N802",
    "N803",
    "N806",
    "N818",
    "PGH004",
    "RUF002",
    "RUF005",
    "RUF012",
    "RUF022",
    "RUF023",
    "RUF100"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
omit = [
    "coloraide/spaces/cam16_jmh.py",
    "coloraide/spaces/zcam_jmh.py",
    "coloraide/deprecate.py"
]

exclude_lines = [
    "pragma: no cover",
    "@overload"
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "coverage",
    "mypy",
    "ruff",
    "build"
]

[tool.hatch.envs.docs]
dependencies = [
    "zensical",
    "markdown",
    "pymdown-extensions",
    "pymdown_lexers @ git+https://github.com/facelessuser/pymdown-lexers.git",
    "pyspelling",
    "build",
    "python-minifier"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.test.scripts]
test = [
    "mypy",
    "python -m pytest --cov coloraide --cov-append --cov-report term-missing --cov-report xml --cov-report html:.cov tests"
]
lint = 'python -m ruff check .'

[tool.hatch.envs.docs.scripts]
spellcheck = [
    "python -m tools/buildwheel.py",
    "python -m zensical.main build -f zensical.yml --clean --strict; pyspelling"
]
clean = [
    "python -m tools/buildwheel.py",
    "python -m zensical.main build -f zensical.yml --clean"
]
serve = [
    "python -m tools/buildwheel.py",
    "python -m zensical.main serve -f zensical.yml"
]
build = [
    "python -m tools/buildwheel.py",
    "npm run build",
    "python -m zensical.main build -f zensical.yml --clean"
]
